Refined the header container, so that the img spans its entire width. Furthermore, used relative positioning so the header remains within the flow of elements and utilized negaative margins to ignore the padding from the body selector. Ensured to used a margin short-hand to reduce bloat and add a postive margin for the margin-bottom. This is to ensure the header container and main container aren't too close together. Ensured the header spans the entire width of the webpage.

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,16 @@ body {
     padding: 1rem;
 }
 
+header {
+    position: relative;
+    top: 0;
+    margin: -1.5rem -1.5rem 1rem -1.5rem;
+
+    img {
+        width: 100%;
+    }
+}
+
 main {
     width: 327px;
 
